log
Sun Apr 10 23:53:29 UTC 2022: 
 hashmap.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
In file included from test.c:4:0:
hashmap.c:67:1: error: expected identifier or ‘(’ before ‘}’ token
 }
 ^
Compilation failed
d744a37
Sun Apr 10 23:55:04 UTC 2022: 
In file included from test.c:4:0:
hashmap.c:67:1: error: expected identifier or ‘(’ before ‘}’ token
 }
 ^
Compilation failed
eacc0ac
Sun Apr 10 23:55:27 UTC 2022: 
In file included from test.c:4:0:
hashmap.c:67:1: error: expected identifier or ‘(’ before ‘}’ token
 }
 ^
Compilation failed
771385b
Sun Apr 10 23:56:31 UTC 2022: 
In file included from test.c:4:0:
hashmap.c:67:1: error: expected identifier or ‘(’ before ‘}’ token
 }
 ^
Compilation failed
f2ad246
Sun Apr 10 23:56:44 UTC 2022: 
In file included from test.c:4:0:
hashmap.c:67:1: error: expected identifier or ‘(’ before ‘}’ token
 }
 ^
Compilation failed
948a9ac
Sun Apr 10 23:57:38 UTC 2022: 
In file included from test.c:4:0:
hashmap.c:67:1: error: expected identifier or ‘(’ before ‘}’ token
 }
 ^
Compilation failed
87bb191
Sun Apr 10 23:59:39 UTC 2022: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
d6eec9a
Mon Apr 11 00:00:26 UTC 2022: 
 hashmap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  0|0
077132f
Mon Apr 11 00:01:16 UTC 2022: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|0
836c947
